crates/swc_css_parser/tests/errors/rome/invalid/page/space/output.stderr
error: Expected 'left', 'right', 'first' or 'blank' ident
 --> $DIR/tests/errors/rome/invalid/page/space/input.css:1:11
  |
1 | @page Page: blank {
  |           ^

